Change link of button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p>Words that start with 't': <span id="startsWithT"></span></p>
                     <p>Words that end with 'e': <span id="endsWithE"></span></p>
                     <p>Words that start with 't' and end with 'e': <span id="both"></span></p>
-                    <p><a href="scripts.js" class='button'>View Code</a></p>
+                    <p><a href="https://github.com/robertspurlin/Constitution-Preamble-Count/blob/master/scripts.js" target='_blank' class='button'>View Code</a></p>
                 </div>
             </div>
         </div>
